add: front definitivo 1.0

--- a/src/resources/front/css/style.css
+++ b/src/resources/front/css/style.css
@@ -1,29 +1,55 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: roboto;
+    font-family: 'Montserrat', sans-serif, roboto;
+    font-weight: bold;
+    text-shadow: 0.1px 0.1px yellow;
 }
 
 html, body{
-/*background: rgb(2,0,36);
-background: linear-gradient(133deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 15%, rgba(0,156,188,1) 52%, rgba(0,212,255,1) 77%);
-*/
+    /*background: rgb(2,0,36);
+    background: linear-gradient(133deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 15%, rgba(0,156,188,1) 52%, rgba(0,212,255,1) 77%);
+    */
+    color:white;
+    background-image : url('../images/wall1opa.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 16px;
+}
+
+header{
+    background-color: rgba(236, 231, 163, 0.8);
+    padding: 1%;
+    text-align: center;
+    min-height: 10%;
+    color: black;
+  }
+
+section{
+max-width: 1336px;
+text-align: center;
+margin-top: 2%;
+}
+
+footer{
+    margin-top: 5%;
+    text-align: center;
+    font-size: 12px;
 }
 
 h1{
     margin-left: 3%;
-    margin-top: 1%;
+    margin-bottom: 0;
+    font-size: 1rem !important;
+    font-weight: bold;
 }
 
 form{
-    margin-top: 3%;
     display: block;
     margin-left: 3%;
 }
 
 form p{
-    margin-bottom: 1%;
-    margin-top: 1%;
 }
 
 form input{
@@ -50,14 +76,31 @@ fieldset{
     border: none;
 }
 
+.selectgenre{
+    color: white;
+    font-weight: bold;
+    border-color: yellow;
+}
+
 #search_button{
     display: flex;
     margin-top: 2%;
-    margin-left: 1%;
+    margin-left: 45%;
+    background-color: yellow;
+    color:black;
+    border-color: black;
 }
 
 #year_slider{
     width: 30%;
+    margin-left: 35%;
+    margin-bottom: 2%;
+    background-color: yellow;
+}
+
+.ui-widget-header {
+    border: 1px solid #ddd;
+    background: #2c2828;
 }
 
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited, a.ui-button, a:link.ui-button, a:visited.ui-button, .ui-button {
@@ -73,10 +116,122 @@ fieldset{
 }
 
 .btnsele{
-    background-color:#6c757d;
-    color:#FFF;
+    background-color:yellow !important;
+    color:black !important;
 }
+
+.selectgenre:active{
+        background-color:yellow !important;
+        color:black !important;
+}
+.btn-outline-secondary:hover{
+    background: yellow;
+    color: black;
+}
+
 
 .form-check-input[type="checkbox"]{
     display:none;
 }
+
+.emoji{
+    font-size: 45px;
+}
+
+
+
+/*
+.ec-grin:before {
+    content: "😁";
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 3.8);
+}
+*/
+
+label{
+    margin: 15px;
+}
+
+input[type="radio"]:checked + label span {
+    filter: drop-shadow(0 0 7px yellow); /* Ejemplo: brillo rojo */ 
+    font-size: 49px;
+}
+
+label:hover.emoji {
+    transform: scale(1.1);
+}
+input[type="radio"]:focus {
+    outline: none;
+}
+
+.emoji-input{
+    display : none;
+}
+
+#years_desde, #years_hasta{
+    width: 5%;
+    border: 0;
+    color: yellow !important;
+    font-weight: bold;
+    background: no-repeat;
+    text-shadow: 1px 1px black;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: yellow;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px yellow;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
