--- a/src/resources/front/recomendation/css/moviedisplaycss.css
+++ b/src/resources/front/recomendation/css/moviedisplaycss.css
@@ -1,35 +1,76 @@
+*{
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif, roboto;
+  font-weight: bold;
+  text-shadow: 0.1px 0.1px yellow;
+}
+
+html, body{
+  /*background: rgb(2,0,36);
+  background: linear-gradient(133deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 15%, rgba(0,156,188,1) 52%, rgba(0,212,255,1) 77%);
+  */
+  background-color: rgb(31, 27, 27);
+  color:white;
+  font-size: 16px;
+}
+
+header{
+  background-color: rgba(236, 231, 163, 0.8);
+  padding: 1%;
+  text-align: center;
+  min-height: 10%;
+  color: black;
+}
+
+footer{
+  margin-top: 5%;
+  text-align: center;
+  font-size: 12px;
+}
+
+h1{
+  margin-left: 3%;
+  margin-bottom: 0;
+  font-size: 1rem !important;
+}
+
+h3{
+  margin-top: 2%;
+}
+
 main .fullDisplay {
-  flex-basis: 70%;  /*Asignación del 70% del espacio total (distribución 30-70 del asi y el contenido general)*/
-  overflow-y: hidden; /*Si algún texto se sale de su caja, se oculta. */
+  flex-basis: 70%; 
+  overflow-y: hidden;
 }
 
 .moviesDisplay {
-  text-align: center; /*Alineación de todos los textos al centro. Títulos, enlaces, títulos de las películas e inclusive las imágenes.*/
+  text-align: center; 
 }
 
 .moviesDisplay h5{
-        font-size: 150%; /*Apliamos Títulos.*/
-  padding-top: 2%;  /*separación superior de los títulos.*/
+        font-size: 150%; 
+  padding-top: 2%; 
 }
 
 .moviesDisplay article {
-  display: inline-block;  /*Display de películas de izq a dcha y en bloque. Cuando llegue al tope pasa a la sigueinte linea abajo.*/
-  padding: 2%;            /*Separación entre películas.*/
+  display: inline-block;  
+  padding: 2%;            
 }
 
 .moviesDisplay article img {
-        transition: opacity 0.5s ease-out; /*Efecto de transición cuando pongo el cursor encima, así no se opaca de forma directa.*/
-  border-radius: 10px;  /*Redondear picos de las imágenes*/
+  transition: opacity 0.5s ease-out;
+  border-radius: 10px;  
 }
 
 .moviesDisplay article img:hover {
-  opacity: 0.4; /*reduce la opacidad de la imagen si el cursor está encima.*/
+  opacity: 0.4; 
 }
 
 
 .moviesDisplay a.vertodo {
-  padding-top: 3%;  /*Separación superior de los enlaces.*/
-  font-size: 120%;  /*Incrementos en la fuente de los enlaces.*/
-  text-decoration: none;  /*Eliminar subrayado de los enlaces.*/
+  padding-top: 3%;  
+  font-size: 120%;  
+  text-decoration: none; 
 
 }
