--- a/src/resources/front/recomendation/css/pelicss.css
+++ b/src/resources/front/recomendation/css/pelicss.css
@@ -27,8 +27,10 @@ footer{
 }
 
 h1{
+  margin-left: 3%;
   margin-bottom: 0;
-  font-size: 16px;
+  font-size: 1rem !important;
+  font-weight: bold;
 }
 
 h2{
