mejoras en el front

--- a/src/resources/front/recomendation/css/moviedisplaycss.css
+++ b/src/resources/front/recomendation/css/moviedisplaycss.css
@@ -32,6 +32,14 @@ h1{
   font-size: 1rem !important;
 }
 
+#logo{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 2px;
+    left: 3px;
+}
+
 h3{
   margin-top: 2%;
 }
@@ -62,5 +70,23 @@ main .fullDisplay {
 
 .moviesDisplay article img:hover {
   opacity: 0.4; 
+}
+
+.center-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+}
+.center-button a {
+  display: inline-block;
+  background-color: rgba(236, 231, 163, 0.8);
+  color: black;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: opacity 0.3s ease;
+}
+.center-button a:hover {
+  opacity:0.7;
 }
 
