--- a/src/resources/front/css/style.css
+++ b/src/resources/front/css/style.css
@@ -25,6 +25,14 @@ header{
     color: black;
   }
 
+#logo{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 2px;
+    left: 3px;
+}
+
 section{
 max-width: 1336px;
 text-align: center;
